tasks butane download

--- a/roles/timezone-chrony-rhcos/tasks/config-chrony.yml
+++ b/roles/timezone-chrony-rhcos/tasks/config-chrony.yml
@@ -9,7 +9,7 @@
 - name: '[POSTINSTALL] Download Butane'
   get_url:
     url: "{{ butane }}"
-    dest: "{{ files_path }}/{{ butane }}"
+    dest: "{{ files_path }}/butane"
     mode: 0755
 
 - name: '[POSTINSTALL] Generate Machine Config Chrony'
