task chrony create yaml

--- a/roles/timezone-chrony-rhcos/tasks/config-chrony.yml
+++ b/roles/timezone-chrony-rhcos/tasks/config-chrony.yml
@@ -14,7 +14,7 @@
 
 - name: '[POSTINSTALL] Generate Machine Config Chrony'
   shell:
-    cmd: "{{ files_path }}/{{ butane }} {{ files_path }}/machine-config-chrony.bu -o {{ files_path }}/machine-config-chrony.yaml"
+    cmd: "{{ files_path }}/butane {{ files_path }}/machine-config-chrony.bu -o {{ files_path }}/machine-config-chrony.yaml"
 #- name: '[POSTINSTALL][ODF] Setup ODF Operator 4.10'
 #  k8s:
 #    kubeconfig: "{{ kubeconfig }}"
