--- a/roles/timezone-chrony-rhcos/tasks/config-timezone.yml
+++ b/roles/timezone-chrony-rhcos/tasks/config-timezone.yml
@@ -6,8 +6,9 @@
     dest: "{{ files_path }}/machine-config-timezone.yaml"
   when: config_timezone == True
 
-#- name: '[POSTINSTALL][ODF] Setup ODF Operator 4.10'
-#  k8s:
-#    kubeconfig: "{{ kubeconfig }}"
-#    state: present
-#    definition: "{{ lookup('template', 'machine-config-timezone.j2') }}"
+- name: '[POSTINSTALL][ODF] Setup ODF Operator 4.10'
+  k8s:
+    kubeconfig: "{{ kubeconfig }}"
+    state: present
+    definition: "{{ lookup('template', 'machine-config-timezone.j2') }}"
+  when: config_timezone == True
