--- a/main.yml
+++ b/main.yml
@@ -56,12 +56,18 @@
 
     - name: '[OCP4-AUTO-INSTALL][POST-INSTALL][TIME] Configure Timezone and Chrony'
       include_role:
-        name: "timezone-chrony-rhcos"
+        name: "ocp4-post-timezone-chrony"
       when:
         - set_timezone_chrony == True
 
+    - name: '[OCP4-AUTO-INSTALL][POST-INSTALL][AUTH] Configure Authentication'
+      include_role:
+        name: "ocp4-post-auth"
+      when:
+        - set_auth == True
+
     - name: '[OCP4-AUTO-INSTALL][POST-INSTALL] Backup Files'
       include_role:
-        name: "backup-files"
+        name: "ocp4-post-backup-files"
       when:
         - backup_files == True
