--- a/vars/vars.yml
+++ b/vars/vars.yml
@@ -20,8 +20,8 @@ install_logging: False
 bkp_etcd_post_install: False
 install_odf: False
 backup_files: False
-set_timezone_chrony: True
-
+set_timezone_chrony: False
+set_auth: True
 
 #### Only in Tower-mode
 tower_used: False
@@ -101,3 +101,7 @@ timezone: America/Sao_Paulo
 ntp_server:
   - 200.160.7.186
   - 200.160.0.8
+
+#Authentication
+config_htpasswd: True
+config_ldap: True
