add python dependence and task add secret htpasswd

--- a/roles/ocp4-post-auth/tasks/htpasswd.yml
+++ b/roles/ocp4-post-auth/tasks/htpasswd.yml
@@ -2,8 +2,25 @@
 
 - name: '[POSTINSTALL] Create htpasswd Files'
   community.general.htpasswd:
-    path: "{{ files_path }}/htpasswd.users"
+    path: "{{ files_path }}/users.htpasswd"
     name: admin
     password: "{{ htpasswd_pass }}"
     crypt_scheme: md5_crypt
+  when: config_htpasswd == True
+
+- name: '[POSTINSTALL] Create Secret htpasswd Files'
+  k8s:
+    kubeconfig: "{{ kubeconfig }}"
+    state: present
+    definition:
+      apiVersion: v1
+      kind: Secret
+      metadata:
+        name: htpass-secret
+        namespace: openshift-config
+      data:
+        htpasswd: "{{ lookup('file', '{{ files_path }}/users.htpasswd') | b64encode }}"
+    validate_certs: false
+    validate:
+      fail_on_error: yes
   when: config_htpasswd == True
