add htpasswd authentication ocp

--- a/roles/ocp4-post-auth/tasks/htpasswd.yml
+++ b/roles/ocp4-post-auth/tasks/htpasswd.yml
@@ -3,7 +3,7 @@
 - name: '[POSTINSTALL] Create htpasswd Files'
   community.general.htpasswd:
     path: "{{ files_path }}/users.htpasswd"
-    name: admin
+    name: "{{ htpasswd_user }}"
     password: "{{ htpasswd_pass }}"
     crypt_scheme: md5_crypt
   when: config_htpasswd == True
@@ -23,4 +23,18 @@
     validate_certs: false
     validate:
       fail_on_error: yes
+  when: config_htpasswd == True
+
+- name: '[POSTINSTALL] Apply Htpasswd Oauth'
+  k8s:
+    kubeconfig: "{{ kubeconfig }}"
+    state: present
+   merge_type:
+    - merge
+    definition: "{{ lookup('template', 'oauth-htpasswd.j2') }}"
+  when: config_htpasswd == True
+
+- name: '[POSTINSTALL] Apply Cluster Admin User Htpasswd'
+  shell:
+    cmd: "{{ files_path }}/oc --kubeconfig {{ kubeconfig }} --insecure-skip-tls-verify adm policy add-cluster-role-to-user cluster-admin {{ htpasswd_user }}"
   when: config_htpasswd == True
