--- a/roles/ocp4-post-auth/templates/oauth-htpasswd.yml
+++ b/roles/ocp4-post-auth/templates/oauth-htpasswd.yml
@@ -4,9 +4,11 @@ metadata:
   name: cluster
 spec:
   identityProviders:
-  - name: htpasswd 
-    mappingMethod: claim 
+  - name: htpasswd_provider
+    challenge: true
+    login: true
+    mappingMethod: claim
     type: HTPasswd
     htpasswd:
       fileData:
-        name: htpass-secret 
+        name: htpasswd-secret
