--- a/roles/ocp4-post-auth/tasks/htpasswd.yml
+++ b/roles/ocp4-post-auth/tasks/htpasswd.yml
@@ -57,6 +57,11 @@
   when:
     - config_htpasswd == True
 
+- name: '[POSTINSTALL][HTPASSWD] Apply Cluster Admin User Htpasswd'
+  shell:
+    cmd: "{{ files_path }}/oc --kubeconfig {{ kubeconfig }} --insecure-skip-tls-verify adm policy add-cluster-role-to-user cluster-admin {{ ocp4_htpasswd_admin }}"
+  when: config_htpasswd == True
+
 - name: '[POST-OAUTH][HTPASSWD] Print User Information'
   debug:
     msg: "{{ item }}"
