shell command create secret

--- a/roles/ocp4-post-auth/tasks/htpasswd.yml
+++ b/roles/ocp4-post-auth/tasks/htpasswd.yml
@@ -39,9 +39,7 @@
     - config_htpasswd == True
 
 - name: '[POST-OAUTH][HTPASSWD] Create htpasswd secret from htpasswd file'
-  shell: "{{ files_path }}/oc create secret generic htpasswd-secret -n openshift-config --from-file=htpasswd={{ files_path }}/users.htpasswd"
-  environment:
-    KUBECONFIG: "{{ kubeconfig }}"
+  shell: "{{ files_path }}/oc --kubeconfig {{ kubeconfig }} --insecure-skip-tls-verify create secret generic htpasswd-secret -n openshift-config --from-file=htpasswd={{ files_path }}/users.htpasswd"
   when:
     - config_htpasswd == True
 
