--- a/roles/ocp4-post-auth/tasks/htpasswd.yml
+++ b/roles/ocp4-post-auth/tasks/htpasswd.yml
@@ -19,6 +19,7 @@
   template:
     src: "htpasswd.j2"
     dest: "{{ files_path }}/users.htpasswd"
+    mode: 0664
   when:
     - htpasswd_line is succeeded
     - config_htpasswd == True
