add task http tools

--- a/roles/ocp4-post-auth/tasks/htpasswd.yml
+++ b/roles/ocp4-post-auth/tasks/htpasswd.yml
@@ -1,5 +1,11 @@
 ---
 
+- name: '[POST-OAUTH][HTPASSWD] Install HTTP TOOLS'
+  yum:
+    name: httpd-tools
+    state: latest
+  when: config_htpasswd == True
+
 - name: '[POST-OAUTH][HTPASSWD] Generate htpasswd hash for admin user'
   shell: >-
     htpasswd -nb "{{ ocp4_htpasswd_admin }}" "{{ ocp4_htpasswd_admin_password }}"|cut -d: -f2
@@ -19,7 +25,6 @@
   template:
     src: "htpasswd.j2"
     dest: "{{ files_path }}/users.htpasswd"
-    mode: 0664
   when:
     - htpasswd_line is succeeded
     - config_htpasswd == True
