--- a/roles/ocp4-post-auth/tasks/htpasswd.yml
+++ b/roles/ocp4-post-auth/tasks/htpasswd.yml
@@ -25,6 +25,9 @@
   template:
     src: "htpasswd.j2"
     dest: "{{ files_path }}/users.htpasswd"
+    mode: 0664
+    owner: root
+    group: root
   when:
     - htpasswd_line is succeeded
     - config_htpasswd == True
