--- a/roles/ocp4-post-auth/tasks/htpasswd.yml
+++ b/roles/ocp4-post-auth/tasks/htpasswd.yml
@@ -64,7 +64,7 @@
 
 - name: '[POSTINSTALL][HTPASSWD] Apply Cluster Admin User Htpasswd'
   shell:
-    cmd: "{{ files_path }}/oc --kubeconfig {{ kubeconfig }} --insecure-skip-tls-verify adm policy add-cluster-role-to-user cluster-admin {{ ocp4_htpasswd_admin }}"
+    cmd: "{{ files_path }}/oc --kubeconfig {{ kubeconfig }} --insecure-skip-tls-verify adm policy add-cluster-role-to-user {{ cluster_role_htpasswd }} {{ ocp4_htpasswd_admin }}"
   when: config_htpasswd == True
 
 - name: '[POST-OAUTH][HTPASSWD] Print User Information'
