--- a/roles/ocp4-post-auth/templates/oauth-htpasswd.yml
+++ b/roles/ocp4-post-auth/templates/oauth-htpasswd.yml
@@ -4,7 +4,7 @@ metadata:
   name: cluster
 spec:
   identityProviders:
-  - name: htpasswd_provider
+  - name: htpasswd
     challenge: true
     login: true
     mappingMethod: claim
