adjusting modules and adding modules auth

--- a/main.yml
+++ b/main.yml
@@ -3,6 +3,7 @@
   hosts: localhost
   connection: local
   vars_files:
+    - vars/modules.yml
     - vars/vars.yml
     - vault/vault.yml
   collections:
