--- a/.gitleaks.toml
+++ b/.gitleaks.toml
@@ -3,8 +3,6 @@
 
   # Ignore based on any subset of the file path
   paths = [
-    '''collections\/openshift\/ansible_collections\/''',
-                
-    # Ignore some long path
-    '''examples\/some\/long\/path\/server.key$''',
+    '''collections\/ansible_collections\/''',
+
   ]
