--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -21,26 +21,26 @@
     name: "{{ bkp_path }}"
     state: directory
 
-- name: '[INSTALL_CONFIG] Create bin directory'
+- name: '[COMMON] Create ssh directory'
   file:
     path: "{{ user_path }}/.ssh"
     state: directory
 
-- name: '[INSTALL_CONFIG] Generate SSH keys'
+- name: '[COMMON] Generate SSH keys'
   openssh_keypair:
     type: ed25519
     path: "{{ user_path }}/.ssh/id_rsa"
 
-- name: '[INSTALL_CONFIG] Slurp public key'
+- name: '[COMMON] Slurp public key'
   slurp:
     path: "{{ user_path }}/.ssh/id_rsa.pub"
   register: idrsapub
 
-- name: '[INSTALL_CONFIG] [PREREQS] Copy python prerequisites file'
+- name: '[COMMON] [PREREQS] Copy python prerequisites file'
   copy:
     src: ./requirements.txt
     dest: "{{ user_path }}/requirements.txt"
     
-- name: '[INSTALL_CONFIG] [PREREQS] Install python prerequisites'
+- name: '[COMMON] [PREREQS] Install python prerequisites'
   pip:
     requirements: "{{ user_path }}/requirements.txt"
