--- a/roles/ocp4-install-vsphere/tasks/create_config.yml
+++ b/roles/ocp4-install-vsphere/tasks/create_config.yml
@@ -1,17 +1,12 @@
 ---
 
-#- set_fact:
-#    template_config: "{% if ocp4_version == 4.10.* %}install-config-yml-4-10.j2
-#                      {% else ocp4_version == 4.12.* %}install-config-yml-4-12.j2
-#                      {% endif %}"
-
-- name: '[INSTALL_CONFIG] Generate config install-config.yaml'
+- name: '[INSTALL_CONFIG] Generate config install-config.yaml 4.10'
   template:
     src: install-config-yml-4-10.j2
     dest: "{{ deploy_path }}/install-config.yaml"
   when: ocp4_version | regex_search('.*4.10.*')
 
-- name: '[INSTALL_CONFIG] Generate config install-config.yaml'
+- name: '[INSTALL_CONFIG] Generate config install-config.yaml 4.12'
   template:
     src: install-config-yml-4-12.j2
     dest: "{{ deploy_path }}/install-config.yaml"
