--- a/roles/ocp4-post-infra-nodes/tasks/main.yml
+++ b/roles/ocp4-post-infra-nodes/tasks/main.yml
@@ -2,3 +2,6 @@
 # tasks file for roles/ocp4-post-infra-nodes
 
 - import_tasks: infra-nodes.yml
+- import_tasks: ingress-controller.yml
+- import_tasks: image-registry.yml
+- import_tasks: monitoring.yml
