Modificado openshift auth

--- a/roles/ocp4-post-auth/tasks/htpasswd.yml
+++ b/roles/ocp4-post-auth/tasks/htpasswd.yml
@@ -20,6 +20,7 @@
   when:
     - ocp4_htpasswd_admin_password is defined
     - htpasswd_line is succeeded
+    - config_htpasswd == True
 
 - name: '[POST-OAUTH][HTPASSWD] Generate htpasswd file'
   template:
