--- a/collections/requirements.yml
+++ b/collections/requirements.yml
@@ -1,6 +1,10 @@
 collections:
+#  - name: community.kubernetes
+#    version: 2.3.2
+#    source: https://galaxy.ansible.com
+
   - name: community.kubernetes
-    version: 2.3.2
+    version: 2.0.1
     source: https://galaxy.ansible.com
 
   - name: community.crypto
